[gd_scene load_steps=11 format=3 uid="uid://eqdk1vhc1wxq"]

[ext_resource type="Script" path="res://assets/scripts/coding_blocks/variables/change_variable.gd" id="1_vpmng"]
[ext_resource type="Texture2D" uid="uid://dk1k86gv1wu1a" path="res://assets/textures/coding_blocks_textures/variables/base.png" id="2_esyyj"]
[ext_resource type="Texture2D" uid="uid://bvqf7q5103ohn" path="res://assets/textures/coding_blocks_textures/variables/change_label.png" id="2_yky4f"]
[ext_resource type="FontFile" uid="uid://3qr0yqigfcse" path="res://assets/font/lexend/Lexend-Medium.ttf" id="4_0gjvn"]
[ext_resource type="Texture2D" uid="uid://dtmeujhnc51ao" path="res://assets/textures/coding_blocks_textures/variables/to_label.png" id="4_t6bty"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4d62n"]
size = Vector2(174, 32)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_c2ipc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kekde"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o11e6"]
size = Vector2(12, 4)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gf813"]
size = Vector2(12, 4)

[node name="change_variable" type="Area2D" groups=["block"]]
collision_mask = 0
monitoring = false
script = ExtResource("1_vpmng")

[node name="change_variable_shape" type="CollisionShape2D" parent="."]
position = Vector2(87, 16)
shape = SubResource("RectangleShape2D_4d62n")

[node name="change_variable_texture" type="NinePatchRect" parent="."]
offset_right = 87.0
offset_bottom = 16.0
scale = Vector2(2, 2)
texture = ExtResource("2_esyyj")
region_rect = Rect2(0, 0, 64, 16)
patch_margin_left = 11
patch_margin_top = 4
patch_margin_right = 11
patch_margin_bottom = 4

[node name="change_label" type="TextureRect" parent="change_variable_texture"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 3.0
offset_top = -3.0
offset_right = 20.0
offset_bottom = 3.0
texture = ExtResource("2_yky4f")
expand_mode = 1
stretch_mode = 5

[node name="name" type="LineEdit" parent="change_variable_texture/change_label"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = -0.833
anchor_right = 1.0
anchor_bottom = -0.833
offset_top = -0.00199986
offset_right = 64.0
offset_bottom = 27.998
scale = Vector2(0.5, 0.5)
theme_override_fonts/font = ExtResource("4_0gjvn")
theme_override_styles/focus = SubResource("StyleBoxEmpty_c2ipc")
placeholder_text = "name"
expand_to_text_length = true
context_menu_enabled = false
virtual_keyboard_enabled = false
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false
selecting_enabled = false
deselect_on_focus_loss_enabled = false
flat = true
select_all_on_focus = true
caret_blink = true

[node name="to_label" type="TextureRect" parent="change_variable_texture/change_label/name"]
layout_mode = 2
anchor_left = 1.0
anchor_right = 1.0
offset_left = 1.0
offset_top = 10.0
offset_right = 12.0
offset_bottom = 21.0
texture = ExtResource("4_t6bty")
expand_mode = 1
stretch_mode = 5

[node name="value" type="LineEdit" parent="change_variable_texture/change_label/name/to_label"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.25
anchor_top = -0.9
anchor_right = 1.25
anchor_bottom = -0.9
offset_left = 0.25
offset_top = -0.1
offset_right = 64.25
offset_bottom = 27.9
theme_override_fonts/font = ExtResource("4_0gjvn")
theme_override_styles/focus = SubResource("StyleBoxEmpty_kekde")
placeholder_text = "value"
expand_to_text_length = true
context_menu_enabled = false
virtual_keyboard_enabled = false
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false
selecting_enabled = false
flat = true
select_all_on_focus = true
caret_blink = true

[node name="head" type="Area2D" parent="." groups=["head"]]
collision_layer = 2
collision_mask = 0
monitoring = false

[node name="head_shape" type="CollisionShape2D" parent="head"]
position = Vector2(14, 2)
shape = SubResource("RectangleShape2D_o11e6")

[node name="tail" type="Area2D" parent="." groups=["tail"]]
position = Vector2(0, 28)
collision_layer = 2
collision_mask = 0
monitoring = false

[node name="tail_shape" type="CollisionShape2D" parent="tail"]
position = Vector2(14, 2)
shape = SubResource("RectangleShape2D_gf813")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="text_changed" from="change_variable_texture/change_label/name" to="." method="_on_name_text_changed"]
[connection signal="text_changed" from="change_variable_texture/change_label/name/to_label/value" to="." method="_on_value_text_changed"]
[connection signal="area_entered" from="head" to="." method="_on_head_area_entered"]
[connection signal="area_exited" from="head" to="." method="_on_head_area_exited"]
[connection signal="area_entered" from="tail" to="." method="_on_tail_area_entered"]
[connection signal="area_exited" from="tail" to="." method="_on_tail_area_exited"]
